--- a/mate/package.json
+++ b/mate/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.4.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
